Fixed footer z-index bug.

--- a/styles.css
+++ b/styles.css
@@ -596,7 +596,7 @@ footer {
   margin-top: -1px;
   background-color: #343d68;
   padding: 5rem;
-  z-index: -2;
+  /* z-index: -2; */
 }
 
 .footer-wrapper {
@@ -614,7 +614,7 @@ footer {
   color: #535c87;
   user-select: none;
   font-size: 5em;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .link-wrapper {
